完成了个人设置的视图展示和密码修改的逻辑,添加了githubid和qqopenid为方便绑定逻辑,进一步完善了页面的展示画面